be-user-notifications - v1.2 - refactor/update/fix